@@ -98,7 +98,7 @@ static CommandDef icq_status_list[] =
             STATUS_ONLINE,
             I18N_NOOP("Online"),
             "ICQ_online",
-            "http://www.aim.com/help_faq/forgot_password/password.adp",
+            NULL,
             NULL,
             0,
             0,
@@ -246,7 +246,7 @@ static CommandDef aim_descr =
         I18N_NOOP("AIM"),
         "AIM_online",
         NULL,
-        NULL,
+        "http://www.aim.com/help_faq/forgot_password/password.adp",
         0,
         0,
         0,
