@@ -6,6 +6,7 @@ ICQ: Fix set birthday flag
 Fix apply custom fonts
 Fix communication-problem with AIM-Screennames > 13 chars
 Fix not receive AuthGrant from some ICQ-users
+Proxy: add support listen sockets for SOCKS4 and SOCKS5
 
 Version 0.9.2
 Add styles plugin
